--- a/404.html
+++ b/404.html
@@ -11,21 +11,21 @@
 <meta itemprop="description" content=""><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="nilswenzlitschke.de/404.html" />
+<meta property="og:url" content="geheim01.github.io/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content=""/>
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/nilswenzlitschke.de/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/nilswenzlitschke.de/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/nilswenzlitschke.de/favicon-16x16.png">
-	<link rel="manifest" href="/nilswenzlitschke.de/site.webmanifest">
-	<link rel="mask-icon" href="/nilswenzlitschke.de/safari-pinned-tab.svg" color="">
-	<link rel="shortcut icon" href="/nilswenzlitschke.de/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="/geheim01.github.io/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/geheim01.github.io/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/geheim01.github.io/favicon-16x16.png">
+	<link rel="manifest" href="/geheim01.github.io/site.webmanifest">
+	<link rel="mask-icon" href="/geheim01.github.io/safari-pinned-tab.svg" color="">
+	<link rel="shortcut icon" href="/geheim01.github.io/favicon.ico">
 
 	<title>404 Page not found</title>
-	<link rel="stylesheet" href="/nilswenzlitschke.de/css/style.min.037b6ee8f8c1baab6a3d0a9da11c3ff18a7552471f16c59fd98538d5ce99208b.css" integrity="sha256-A3tu6PjBuqtqPQqdoRw/8Yp1UkcfFsWf2YU41c6ZIIs=" crossorigin="anonymous">
+	<link rel="stylesheet" href="/geheim01.github.io/css/style.min.037b6ee8f8c1baab6a3d0a9da11c3ff18a7552471f16c59fd98538d5ce99208b.css" integrity="sha256-A3tu6PjBuqtqPQqdoRw/8Yp1UkcfFsWf2YU41c6ZIIs=" crossorigin="anonymous">
 </head>
 
 <body id="page">
@@ -38,14 +38,14 @@
 			<h1>404</h1>
 			<p>Oops, page not found…</p>
 			<p class="btn-404">
-				<a href="nilswenzlitschke.de"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
-				<a href="nilswenzlitschke.de/posts"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg>Archives</a>
+				<a href="geheim01.github.io"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
+				<a href="geheim01.github.io/posts"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg>Archives</a>
 			</p>
 		</div>
 	</div>
 
 
-	<script src="/nilswenzlitschke.de/js/bundle.min.5a42c67b729ee2fa1059251688235399704707e04edb4e28c42c6f6dfa49d1d9.js" integrity="sha256-WkLGe3Ke4voQWSUWiCNTmXBHB+BO204oxCxvbfpJ0dk=" crossorigin="anonymous"></script>
+	<script src="/geheim01.github.io/js/bundle.min.5a42c67b729ee2fa1059251688235399704707e04edb4e28c42c6f6dfa49d1d9.js" integrity="sha256-WkLGe3Ke4voQWSUWiCNTmXBHB+BO204oxCxvbfpJ0dk=" crossorigin="anonymous"></script>
 	
 
 </body>
