--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 <meta itemprop="description" content=""><meta property="og:title" content="Nils Wenzlitschke" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="geheim01.github.io/" />
+<meta property="og:url" content="https://nilswenzlitschke.de/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Nils Wenzlitschke"/>
 <meta name="twitter:description" content=""/>
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/geheim01.github.io/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/geheim01.github.io/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/geheim01.github.io/favicon-16x16.png">
-	<link rel="manifest" href="/geheim01.github.io/site.webmanifest">
-	<link rel="mask-icon" href="/geheim01.github.io/safari-pinned-tab.svg" color="">
-	<link rel="shortcut icon" href="/geheim01.github.io/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="">
+	<link rel="shortcut icon" href="/favicon.ico">
 
 	<title>Nils Wenzlitschke</title>
-	<link rel="alternate" type="application/rss+xml" href="geheim01.github.io/index.xml" title="Nils Wenzlitschke" />
-	<link rel="stylesheet" href="/geheim01.github.io/css/style.min.037b6ee8f8c1baab6a3d0a9da11c3ff18a7552471f16c59fd98538d5ce99208b.css" integrity="sha256-A3tu6PjBuqtqPQqdoRw/8Yp1UkcfFsWf2YU41c6ZIIs=" crossorigin="anonymous">
+	<link rel="alternate" type="application/rss+xml" href="https://nilswenzlitschke.de/index.xml" title="Nils Wenzlitschke" />
+	<link rel="stylesheet" href="https://nilswenzlitschke.de/css/style.min.037b6ee8f8c1baab6a3d0a9da11c3ff18a7552471f16c59fd98538d5ce99208b.css" integrity="sha256-A3tu6PjBuqtqPQqdoRw/8Yp1UkcfFsWf2YU41c6ZIIs=" crossorigin="anonymous">
 	
 </head>
 
@@ -42,20 +42,20 @@
 			</div>
 			<nav id="home-nav" class="site-nav">
 				
-				<a href="geheim01.github.io/posts/">Posts</a>
-				<a href="geheim01.github.io/about-hugo/">About</a>
+				<a href="https://nilswenzlitschke.de/posts/">Posts</a>
+				<a href="https://nilswenzlitschke.de/about-hugo/">About</a>
 
 			</nav>
 		</div>
 		<div id="home-footer">
 			<p>
-				&copy; 2022 <a href="geheim01.github.io">Nils Wenzlitschke</a> &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a> &#183; <a href="geheim01.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a>
+				&copy; 2022 <a href="https://nilswenzlitschke.de/">Nils Wenzlitschke</a> &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a> &#183; <a href="https://nilswenzlitschke.de/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a>
 			</p>
 		</div>
 	</div>
 
 
-	<script src="/geheim01.github.io/js/bundle.min.5a42c67b729ee2fa1059251688235399704707e04edb4e28c42c6f6dfa49d1d9.js" integrity="sha256-WkLGe3Ke4voQWSUWiCNTmXBHB+BO204oxCxvbfpJ0dk=" crossorigin="anonymous"></script>
+	<script src="https://nilswenzlitschke.de/js/bundle.min.5a42c67b729ee2fa1059251688235399704707e04edb4e28c42c6f6dfa49d1d9.js" integrity="sha256-WkLGe3Ke4voQWSUWiCNTmXBHB+BO204oxCxvbfpJ0dk=" crossorigin="anonymous"></script>
 	
 
 </body>
